--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
 </head>
 <body>
     <h1 id="title">Morse Code Translator</h1>
-
-    <input type="text" id="input" placeholder="Enter your text here">
-
-    <button id="btn">Translate!</button>
     
     <div id="display">
 
     </div>
+
+    <textarea name="text" rows="14" cols="10" wrap="soft" id="input" placeholder="Enter your message here... "></textarea>
+
+    <button id="btn">Translate!</button>
+
 </body>
-<script src="./files/main.js"></script>
+<script type="module" src="./files/main.js"></script>
 </html>
