add in reset button

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 
     </div>
 
-    <textarea name="text" rows="14" cols="10" wrap="soft" id="input" placeholder="Enter your message here... "></textarea>
+    <textarea name="text" rows="14" cols="10" wrap="soft" id="input" placeholder="Enter your message here..."></textarea>
 
-    <button id="btn">Translate!</button>
+    <button id="translate">Translate!</button>
+
+    <button id="reset">Reset</button>
 
 </body>
 <script type="module" src="./files/main.js"></script>
